<resources>
    <string name="app_name">Calculator_App</string>
    <string name="uparrow">^</string>
    <string name="division">/</string>
    <string name="multiply">*</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="modulo">%</string>
    <string name="num0">0</string>
    <string name="point">.</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="equal">=</string>
</resources>