<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculator"
        android:textColor="#ffffff"
        android:textSize="24sp"
       android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:padding="20dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/panel"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="#353935"
        android:padding="20dp" />

    <LinearLayout
        android:id="@+id/belowpart1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:orientation="horizontal"
        >
    <Button
        android:id="@+id/uparrow"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/result"
        android:text="@string/uparrow"
        android:background="@drawable/button_outline"
        />

    <Button
        android:id="@+id/division"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/result"
        android:layout_toRightOf="@+id/uparrow"
        android:text="@string/division"
        android:background="@drawable/button_outline"/>

    <Button
        android:id="@+id/multiply"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/multiply"
        android:background="@drawable/button_outline"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/belowpart2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/belowpart1">

    <Button
        android:id="@+id/num7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/num7"
        android:background="@drawable/button_outline"/>

    <Button
        android:id="@+id/num8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/num8"
        android:background="@drawable/button_outline"/>

    <Button
        android:id="@+id/num9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/num9"
        android:background="@drawable/button_outline"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/belowpart3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/belowpart2">
    <Button
        android:id="@+id/num4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/num4"
        android:background="@drawable/button_outline"/>

    <Button
        android:id="@+id/num5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/num5"
        android:background="@drawable/button_outline"/>

    <Button
        android:id="@+id/num6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/num6"
        android:background="@drawable/button_outline"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/belowpart4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/belowpart3">
    <Button
        android:id="@+id/num1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/num1"
        android:background="@drawable/button_outline"/>

    <Button
        android:id="@+id/num2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/num2"
        android:background="@drawable/button_outline"/>

    <Button
        android:id="@+id/num3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/num3"
        android:background="@drawable/button_outline"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/belowpart5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/belowpart4">
    <Button
        android:id="@+id/modulo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/modulo"
        android:background="@drawable/button_outline"/>

    <Button
        android:id="@+id/num0"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/num0"
        android:background="@drawable/button_outline"
        />

    <Button
        android:id="@+id/point"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/point"
        android:background="@drawable/button_outline"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/sidepart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignRight="@+id/belowpart1"
        android:layout_below="@+id/result"
        >
        <Button
            android:id="@+id/clearbutton"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text="@string/clear"
            android:background="@drawable/button_outline"/>

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text="@string/cancel"
            android:background="@drawable/button_outline"/>

        <Button
            android:id="@+id/subtract"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text="@string/subtract"
            android:background="@drawable/button_outline"/>

        <Button
            android:id="@+id/add"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text="@string/add"
            android:background="@drawable/button_outline"/>

        <Button
            android:id="@+id/equal"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text="@string/equal"
            android:background="@drawable/button_outline"/>

    </LinearLayout>

</RelativeLayout>
